# geen

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Core.h  GeenSyntaxHighlighter.cpp  GeenSyntaxHighlighter.h  GeenTextEditor.cpp  GeenTextEditor.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  TabWidget.cpp  TabWidget.h  geen.rc  iconresource.qrc  main.cpp
